<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="mainTitle"
            type="String" />

        <variable
            name="subTitle"
            type="String" />

        <variable
            name="vm"
            type="com.dida.password.PasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainblack">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_margin="6dp"
            android:src="@drawable/ic_close_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/worngCount_tv"
            style="@style/TextView_regular_20_notice"
            android:layout_marginBottom="10dp"
            android:text="@{vm.wrongCountState}"
            app:layout_constraintBottom_toTopOf="@+id/mainTitle_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible"
            tools:text="1/5" />

        <TextView
            android:id="@+id/mainTitle_tv"
            style="@style/TextView_bold_24_white"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@{mainTitle}"
            android:lineSpacingExtra="28px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="mainTitle" />

        <LinearLayout
            android:id="@+id/password_dial_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="77dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle_tv">

        </LinearLayout>

        <TextView
            android:id="@+id/subTitle_tv"
            style="@style/TextView_regular_14_surface10"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@{subTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_dial_layout"
            tools:text="subTitle" />

        <TextView
            android:id="@+id/find_password_btn"
            style="@style/TextView_regular_12_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/findPassword"
            android:padding="8dp"
            android:background="@drawable/custom_surface8_radius6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitle_tv" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="70dp"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow>

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(1)}"
                    android:text="@string/number1" />

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(2)}"
                    android:text="@string/number2" />

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(3)}"
                    android:text="@string/number3" />
            </TableRow>

            <TableRow android:layout_marginTop="20dp">

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(4)}"
                    android:text="@string/number4" />

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(5)}"
                    android:text="@string/number5" />

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(6)}"
                    android:text="@string/number6" />
            </TableRow>

            <TableRow android:layout_marginTop="20dp">

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(7)}"
                    android:text="@string/number7" />

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(8)}"
                    android:text="@string/number8" />

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(9)}"
                    android:text="@string/number9" />
            </TableRow>

            <TableRow android:layout_marginTop="20dp">

                <Button
                    style="@style/Password_dial_style"
                    android:text="" />

                <Button
                    style="@style/Password_dial_style"
                    android:onClick="@{()->vm.addStack(0)}"
                    android:text="@string/number0" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00ff0000"
                    android:onClick="@{()->vm.removeStack()}"
                    android:src="@drawable/ic_number_backspace" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
